# chrome-tabs

./: Cargo.toml  README.org
src/: bookmarks.rs  http.rs  lib.rs  main.rs  tabs.rs
