[package]
name = "chrome-tabs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chrome-tabs"
path = "src/main.rs"

[dependencies]
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
